--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pickjunk/min",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "A Tiny React Framework",
   "main": "lib/index.js",
   "scripts": {
@@ -35,15 +35,15 @@
   },
   "homepage": "https://github.com/pickjunk/min#readme",
   "devDependencies": {
-    "@babel/cli": "7.2.3",
+    "@babel/cli": "7.12.16",
     "@babel/register": "7.4.0",
     "@types/lodash": "4.14.123",
     "@types/pino": "5.8.12",
     "@types/qs": "6.5.2",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.9.2",
-    "babel-jest": "24.5.0",
-    "jest": "24.5.0",
+    "babel-jest": "26.6.3",
+    "jest": "26.6.3",
     "memory-fs": "0.4.1",
     "puppeteer": "1.14.0",
     "rimraf": "2.6.3"
@@ -61,7 +61,7 @@
     "babel-loader": "8.0.5",
     "colors": "1.3.3",
     "commander": "2.19.0",
-    "compression-webpack-plugin": "3.0.0",
+    "compression-webpack-plugin": "7.1.2",
     "escodegen": "1.11.1",
     "esprima": "4.0.1",
     "estraverse": "4.2.0",
@@ -69,7 +69,7 @@
     "fs-extra": "7.0.1",
     "http-proxy-middleware": "0.19.1",
     "js-object-pretty-print": "0.3.0",
-    "lodash": "4.17.15",
+    "lodash": "4.17.20",
     "node-eval": "2.0.0",
     "open": "6.1.0",
     "pino": "5.13.5",
@@ -83,14 +83,13 @@
     "react-traverse": "1.0.0",
     "register-module": "0.0.2",
     "rxjs": "6.4.0",
-    "typescript": "3.3.4000",
-    "webpack": "4.35.0",
-    "webpack-bundle-analyzer": "3.3.2",
-    "webpack-cli": "3.3.0",
-    "webpack-dev-middleware": "3.6.2",
-    "webpack-hot-middleware": "2.24.3",
-    "webpack-merge": "4.2.1",
-    "webpackbar": "3.1.5"
+    "typescript": "4.1.5",
+    "webpack": "5.21.2",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-middleware": "4.1.0",
+    "webpack-hot-middleware": "2.25.0",
+    "webpack-merge": "5.7.3",
+    "webpackbar": "5.0.0-3"
   },
   "engines": {
     "node": ">=10.0.0",
