--- a/package.json
+++ b/package.json
@@ -35,61 +35,61 @@
   },
   "homepage": "https://github.com/pickjunk/min#readme",
   "devDependencies": {
-    "@babel/cli": "7.12.16",
-    "@babel/register": "7.4.0",
-    "@types/lodash": "4.14.123",
-    "@types/pino": "5.8.12",
-    "@types/qs": "6.5.2",
-    "@types/react": "16.8.8",
-    "@types/react-dom": "16.9.2",
-    "babel-jest": "26.6.3",
-    "jest": "26.6.3",
-    "memory-fs": "0.4.1",
-    "puppeteer": "1.14.0",
-    "rimraf": "2.6.3"
+    "@babel/cli": "^7.12.16",
+    "@babel/register": "^7.12.13",
+    "@types/lodash": "^4.14.168",
+    "@types/pino": "^6.3.5",
+    "@types/qs": "^6.9.5",
+    "@types/react": "^16.14.4",
+    "@types/react-dom": "^16.9.11",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "memory-fs": "^0.4.1",
+    "puppeteer": "^1.20.0",
+    "rimraf": "^2.7.1"
   },
   "dependencies": {
-    "@babel/core": "7.4.0",
-    "@babel/plugin-proposal-class-properties": "7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.4.0",
-    "@babel/plugin-transform-runtime": "7.4.0",
-    "@babel/preset-env": "7.4.2",
-    "@babel/preset-react": "7.0.0",
-    "@babel/preset-typescript": "7.3.3",
-    "@babel/runtime": "7.4.3",
-    "@hot-loader/react-dom": "16.8.5",
-    "babel-loader": "8.0.5",
-    "colors": "1.3.3",
-    "commander": "2.19.0",
-    "compression-webpack-plugin": "7.1.2",
-    "escodegen": "1.11.1",
-    "esprima": "4.0.1",
-    "estraverse": "4.2.0",
-    "express": "4.16.4",
-    "fs-extra": "7.0.1",
-    "http-proxy-middleware": "0.19.1",
-    "js-object-pretty-print": "0.3.0",
-    "lodash": "4.17.20",
-    "node-eval": "2.0.0",
-    "open": "6.1.0",
-    "pino": "5.13.5",
-    "pino-pretty": "3.2.2",
-    "portfinder": "1.0.20",
-    "prettyjson": "1.2.1",
-    "qs": "6.7.0",
-    "react": "16.8.5",
-    "react-dom": "16.8.5",
-    "react-hot-loader": "4.8.4",
-    "react-traverse": "1.0.0",
-    "register-module": "0.0.2",
-    "rxjs": "6.4.0",
-    "typescript": "4.1.5",
-    "webpack": "5.21.2",
-    "webpack-cli": "4.5.0",
-    "webpack-dev-middleware": "4.1.0",
-    "webpack-hot-middleware": "2.25.0",
-    "webpack-merge": "5.7.3",
-    "webpackbar": "5.0.0-3"
+    "@babel/core": "^7.12.16",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.12.15",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.16",
+    "@babel/runtime": "^7.12.13",
+    "@hot-loader/react-dom": "^16.14.0",
+    "babel-loader": "^8.2.2",
+    "colors": "^1.4.0",
+    "commander": "^2.20.3",
+    "compression-webpack-plugin": "^7.1.2",
+    "escodegen": "^1.14.3",
+    "esprima": "^4.0.1",
+    "estraverse": "^4.3.0",
+    "express": "^4.17.1",
+    "fs-extra": "^7.0.1",
+    "http-proxy-middleware": "^0.19.2",
+    "js-object-pretty-print": "^0.3.0",
+    "lodash": "^4.17.20",
+    "node-eval": "^2.0.0",
+    "open": "^6.4.0",
+    "pino": "^6.11.1",
+    "pino-pretty": "^4.5.0",
+    "portfinder": "^1.0.28",
+    "prettyjson": "^1.2.1",
+    "qs": "^6.9.6",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-hot-loader": "^4.13.0",
+    "react-traverse": "^1.0.0",
+    "register-module": "^0.0.2",
+    "rxjs": "^6.6.3",
+    "typescript": "^4.1.5",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-middleware": "^4.1.0",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^5.7.3",
+    "webpackbar": "^5.0.0-3"
   },
   "engines": {
     "node": ">=10.0.0",
